# gen-attack

./: README.md  pyproject.toml
gen_attack/: Dockerfile  Dockerfile.gpu  compose.yaml  pyproject.toml
gen_attack/src/adversarial_attacks/: fgsm.py
gen_attack/src/adversarial_attacks/experiments/: resnet.ipynb
gen_attack/src/benchmarking/: detr.py  resnet.py  results.ipynb  visualize.py
gen_attack/src/image-generation/: gdino.py  sdiff.py
gen_attack/src/image-generation/experiments/: detr.ipynb  gdnio.ipynb  stable-diff.ipynb
