[tool.poetry]
name = "gen-attack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.44.0"
diffusers = "^0.30.0"
torch = "^2.4.0"
accelerate = "^0.33.0"
foolbox = "^3.3.4"
datasets = "^2.21.0"
torchvision = "^0.19.0"
matplotlib = "^3.9.2"
pyqt6 = "^6.7.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
timm = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
